test/fail/basic_syntax/bad_start_token.lily
#[
SyntaxError: Unexpected token +.
    from bad_start_token.lily:6:
]#

+
